Bug 94218 - Weston 1.10 crashes when dropping a drag’n’drop in Firefox 47.0a1 on Xwayland 1.18.1
Summary: Weston 1.10 crashes when dropping a drag’n’drop in Firefox 47.0a1 on Xwayland...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
: 96627 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-19 16:04 UTC by Link Mauve
Modified: 2016-11-22 12:03 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Link Mauve 2016-02-19 16:04:17 UTC
Steps to reproduce:
- Start Firefox
- Select some text, or find an image
- Drag this text/image
- When the left button is released, Weston crashes.

I’m pretty sure this didn’t happen on 1.9, but it’s been a long time since I last used it, I’ll try to debug it later.
Comment 1 Carlos Garnacho Parro 2016-02-22 18:52:31 UTC
The backtrace is:

(gdb) bt
#0  wl_resource_get_version (resource=0x0) at src/wayland-server.c:654
#1  0x000000000041631c in drag_grab_button (grab=0x80eb28, time=<optimized out>, button=<optimized out>, state_w=<optimized out>) at src/data-device.c:658
#2  0x00000000004137e8 in notify_button (seat=seat@entry=0x63a828, time=173087584, button=button@entry=272, state=WL_POINTER_BUTTON_STATE_RELEASED) at src/input.c:1334
#3  0x00007ffff65e5462 in x11_backend_deliver_button_event (b=b@entry=0x63a7b0, event=event@entry=0x8814e0, state=state@entry=0) at src/compositor-x11.c:1142
#4  0x00007ffff65e618b in x11_backend_handle_event (fd=<optimized out>, mask=<optimized out>, data=0x63a7b0) at src/compositor-x11.c:1341
#5  0x00007ffff7bd3288 in post_dispatch_check (loop=0x6327c0) at src/event-loop.c:387
#6  wl_event_loop_dispatch (loop=0x6327c0, timeout=timeout@entry=0) at src/event-loop.c:429
#7  0x000000000040fc73 in weston_output_repaint (output=0x79cc30) at src/compositor.c:2386
#8  output_repaint_timer_handler (data=0x79cc30) at src/compositor.c:2442
#9  0x00007ffff7bd2c69 in wl_event_source_timer_dispatch (source=0x794b30, ep=<optimized out>) at src/event-loop.c:181
#10 0x00007ffff7bd3232 in wl_event_loop_dispatch (loop=0x62fa60, timeout=timeout@entry=-1) at src/event-loop.c:421
#11 0x00007ffff7bd1aa5 in wl_display_run (display=display@entry=0x62f9d0) at src/wayland-server.c:1051
#12 0x0000000000408b77 in main (argc=1, argv=0x7fffffffd8a8) at src/main.c:859

The patch at https://lists.freedesktop.org/archives/wayland-devel/2016-February/027150.html is meant to address this.
Comment 2 Bryce Harrington 2016-05-23 22:24:29 UTC
Bumping to high since this is a crash bug.
The patch looks good to me but I'd like to see it reviewed by someone knowledgeable with Xwayland.
Comment 3 Jonas Ådahl 2016-06-22 05:11:01 UTC
*** Bug 96627 has been marked as a duplicate of this bug. ***
Comment 4 Daniel Stone 2016-11-22 12:03:03 UTC
Merged Carlos's patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.